--- a/dag/index.html
+++ b/dag/index.html
@@ -70,6 +70,51 @@
             border-radius: 30px;
         }
 
+        .tooltip {
+            position: relative;
+            display: inline-block;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .tooltip .tooltiptext {
+            visibility: hidden;
+            justify-content: center;
+            align-items: center;
+            width: 120px;
+            background-color: #181818;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 7px 0px;
+            position: absolute;
+            z-index: 1;
+            bottom: 125%;
+            left: 50%;
+            margin-left: -60px;
+            opacity: 0;
+            transition: opacity 0.3s;
+            font-size: 12px;
+            font-family: "Poppins", Arial, sans-serif;
+            font-size: 14px;
+        }
+
+        .tooltip .tooltiptext::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #181818 transparent transparent transparent;
+        }
+
+        .tooltip:hover .tooltiptext {
+            visibility: visible;
+            opacity: 1;
+        }
+
         .booster {
             width: 30px;
             height: 18px;
@@ -370,9 +415,11 @@
 
                             <div class="tooltip" data-text="Verfied">
                                 <img class="verified-badge" src="../biolinks/ico/verified.png">
+                                <span class="tooltiptext">Verified</span>
                             </div>
 
                             <div class="tooltip" data-text="Premium">
+                                <span class="tooltiptext">Premium</span>
                                 <img class="diamond" src="../biolinks/ico/dia.png">
                             </div>
                         </div>
