--- a/187/index.html
+++ b/187/index.html
@@ -66,7 +66,6 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('https://files.catbox.moe/33wkaj.jpg');
             backdrop-filter: blur(1.2px);
             background-size: cover;
             background-position: center;
@@ -117,6 +116,32 @@
             object-fit: cover;
             margin-bottom: 15px;
         }
+
+        .video-bg a,
+        #audio-control {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 3rem;
+            height: 3rem;
+            z-index: 100;
+            margin: 2rem;
+            position: absolute;
+            background-color: #d8d8d810;
+            padding: 0.6rem;
+            border-radius: 1.4vh;
+            cursor: pointer;
+            right: -35em;
+            top: 0;
+            transition: all 0.2s;
+        }
+
+        .video-bg a:hover,
+        #audio-control:hover {
+            transition: all 0.2s;
+            background-color: #d8d8d888;
+        }
+
 
         .username {
             font-size: 36px;
@@ -195,10 +220,21 @@
 
 <body>
     <div id="overlay"> hewwo ^-^ </div>
-    <div class="audio-bg"> <audio id="Audio" loop muted>
-            <source src="audio/jivb.mp3" type="audio/mpeg"> Your browser does not support the audio element.
-        </audio> </div>
     <div class="bio-container"> <img src="pfp/jivb.jpg">
+        <div class="audio-bg">
+            <a id="audio-control">
+                <svg fill='#d8d8d8' width="18px" height="18px" viewBox="0 0 16 16"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path clip-rule="evenodd"
+                        d="m2 7.5v3c0 .8.6 1.5 1.4 1.5h2.3l3.2 2.8c.1.1.3.2.4.2s.2 0 .3-.1c.2-.1.4-.4.4-.7v-.9l-7.2-7.2c-.5.2-.8.8-.8 1.4zm8 2v-5.8c0-.3-.1-.5-.4-.7-.1 0-.2 0-.3 0s-.3 0-.4.2l-2.8 2.5-4.1-4.1-1 1 3.4 3.4 5.6 5.6 3.6 3.6 1-1z"
+                        fill-rule="evenodd" />
+                </svg>
+            </a>
+            <video id="background-video" muted loop playsinline webkit-playsinline>
+                <source src="https://cdn.vulify.lol/jivb.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
         <div class="username"> jivb</div>
         <div class="contact-info">
             <p>Telegram: <a href="https://t.me/crimescommitted" target="_blank"
@@ -213,7 +249,67 @@
     <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
 </body>
 <script src="./effects/cursor.js"></script>
-<script> document.addEventListener("DOMContentLoaded", function () { const audio = document.getElementById("Audio"); const audioControl = document.getElementById("audio-control"); audio.volume = 0; overlay.addEventListener("click", () => { audio.muted = false; audio.play(); overlay.style.display = "none"; }); function setVolume(level) { if (level >= 0 && level <= 1) { audio.volume = level; } else { console.error("Volume level must be between 0 and 1"); } } setVolume(0.3); }); </script>
+<script>
+    document.getElementById('overlay').addEventListener('click', function () {
+        this.classList.add('hidden');
+        document.querySelector('.card').classList.add('show');
+        document.querySelector('.ascii-logo').classList.add('show');
+    });
+</script>
+<script>
+        const video = document.getElementById("background-video");
+        const audioControl = document.getElementById("audio-control");
+        const overlay = document.getElementById("overlay");
+        const card = document.querySelector(".card");
+        const viewCountElem = document.getElementById("view-count");
+
+        let hasInteracted = false;
+        let wasPlaying = false;
+
+        audio.volume = 0;
+
+        audioControl.addEventListener("click", () => {
+            if (video.muted) {
+                video.muted = false;
+                audioControl.innerHTML = `<svg fill='#d8d8d8' width="20px" height="20px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path clip-rule="evenodd" d="m2 7.5v3c0 .8.6 1.5 1.4 1.5h2.3l3.2 2.8c.1.1.3.2.4.2s.2 0 .3-.1c.2-.1.4-.4.4-.7v-.9l-7.2-7.2c-.5.2-.8.8-.8 1.4zm8 2v-5.8c0-.3-.1-.5-.4-.7-.1 0-.2 0-.3 0s-.3 0-.4.2l-2.8 2.5-4.1-4.1-1 1 3.4 3.4 5.6 5.6 3.6 3.6 1-1z" fill-rule="evenodd"/></svg>`;
+            } else {
+                video.muted = true;
+                audioControl.innerHTML = `<svg width="18px" height="18px" viewBox="-1 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs></defs><g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g id="Dribbble-Light-Preview" transform="translate(-65.000000, -3803.000000)" fill="#d8d8d8"><g id="icons" transform="translate(56.000000, 160.000000)"><path d="M18.074,3650.7335 L12.308,3654.6315 C10.903,3655.5815 9,3654.5835 9,3652.8985 L9,3645.1015 C9,3643.4155 10.903,3642.4185 12.308,3643.3685 L18.074,3647.2665 C19.306,3648.0995 19.306,3649.9005 18.074,3650.7335" id="play-[#1000]"></path></g></g></g></svg>`;
+            }
+        });
+
+        overlay.addEventListener("click", () => {
+            hasInteracted = true;
+            video.muted = false;
+            video.style.display = 'block';
+            video.play().catch(function (error) {
+                console.log("Autoplay prevented: ", error);
+            });
+            overlay.style.display = "none";
+            card.classList.add("show");
+            incrementViewCount();
+        });
+
+
+        document.getElementById('background-video').addEventListener('touchstart', function (e) {
+            e.preventDefault();
+        });
+
+        document.addEventListener("visibilitychange", function () {
+            if (document.hidden) {
+                wasPlaying != video.paused;
+                if (wasPlaying) {
+                    video.pause();
+                }
+            } else {
+                if (hasInteracted && wasPlaying) {
+                    video.play().catch(function (error) {
+                        console.log("Autoplay prevented: ", error);
+                    });
+                }
+            }
+        });
+</script>
 <script> if (document.addEventListener) { document.addEventListener("DOMContentLoaded", function () { loaded(); }); } else if (document.attachEvent) { document.attachEvent("onreadystatechange", function () { loaded(); }); } function loaded() { setInterval(loop, 300); } var x = 0; var titleText = ["@", "@j", "@ji", "@jiv", "@jivb", "@jiv", "@ji", "@j", "@", "v", "vu", "vul", "vuli", "vulif", "vulify.", "vulify.l", "vulify.lo", "vulify.lol", "vulify.lo", "vulify.l", "vulify.", "vulify", "vulif", "vuli", "vul", "vu", "v"]; function loop() { document.getElementsByTagName("title")[0].innerHTML = titleText[x++ % titleText.length]; } </script>
 <script src="./effects/snowstorm.js"></script>
 </html>
