--- a/187/index.html
+++ b/187/index.html
@@ -283,7 +283,7 @@
     const audioControl = document.getElementById("audio-control");
     const overlay = document.getElementById("overlay");
 
-    video.volume = 0; // Fix: Changed 'audio' to 'video'
+    video.volume = 0.3;
 
     audioControl.addEventListener("click", () => {
         if (video.muted) {
