--- a/187/index.html
+++ b/187/index.html
@@ -23,6 +23,7 @@
             user-select: none;
             -webkit-user-drag: none;
             -moz-user-select: none;
+            cursor: crosshair;
         }
 
         * img {
@@ -32,6 +33,7 @@
         html,
         body {
             -ms-overflow-style: none;
+            cursor: crosshair;
         }
 
         #overlay {
@@ -54,6 +56,7 @@
 
         #overlay.hidden {
             opacity: 0;
+            cursor: auto;
         }
 
         body {
@@ -128,6 +131,7 @@
             height: auto;
             object-fit: cover;
             z-index: -1;
+            cursor: crosshair;
         }
 
 
@@ -144,7 +148,7 @@
             background-color: #d8d8d810;
             padding: 0.6rem;
             border-radius: 1.4vh;
-            cursor: pointer;
+            cursor: crosshair;
             right: -35em;
             top: 0;
             transition: all 0.2s;
