--- a/187/index.html
+++ b/187/index.html
@@ -132,6 +132,7 @@
             object-fit: cover;
             z-index: -1;
             cursor: crosshair;
+            pointer-events: none;
         }
 
 
