--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 </style>
 
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <div class="container">
         <h1>Down for Maintenance</h1>
         <p>Oops! This page is being worked on at the moment, please try again later.</p>
         <p>Contact @jivb on discord for more info</p>
     </div>
     <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
+    <script src="./plix_jscript-1/jscript.js"></script>
 </body>
 
 </html>
