--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="vulify.lol #1 private biolink" />
     <link rel="icon" type="image/x-icon" href="biolinks/ico/logo.png">
     <link href="maincss/main.css" rel="stylesheet" />
+    <meta http-equiv="refresh" content="3;url=index.html" />
     <title>Vulify.lol</title>
 </head>
 
