--- a/187/index.html
+++ b/187/index.html
@@ -265,7 +265,7 @@
                         fill-rule="evenodd" />
                 </svg>
             </a>
-            <video id="background-video" muted loop playsinline webkit-playsinline poster="fallback-image.jpg">
+            <video id="background-video" muted loop playsinline playsinline poster="fallback-image.jpg">
                 <source src="https://cdn.vulify.lol/jivb.mp4" type="video/mp4">
                 <source src="https://cdn.vulify.lol/jivb.webm" type="video/webm">
                 Your browser does not support the video tag.
