--- a/z/index.html
+++ b/z/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="" />
 
     <script src="/js/antinspect.js" type="c50b9563f6c7df36db5af85c-text/javascript"></script>
-    <link rel="icon" type="image/x-icon" href="https://vulify.lol/187/pfp/jivb.jpg">
+    <link rel="icon" type="image/x-icon" href="https://vulify.lol/z/pfp/jivb.jpg">
     <title>jivb</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
