--- a/z/index.html
+++ b/z/index.html
@@ -845,7 +845,7 @@
 
             <p class="bio scrambled" data-text=">.&#60 im a script kiddy"></p>
             <div class="social-links">
-                <a href="https://t.me/crimescommitted" class="social-link" target="_blank">
+                <a href="https://t.me/fraudulentbills" class="social-link" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
                         viewBox="0 0 24 24" data-icon="mdi:telegram" style="color:#efe6e6" class="iconify iconify--mdi">
                         <path
